<resources>
    <string name="app_name">黑马天气通</string>
    <string name="beijing">北京市</string>
    <string name="location_icon">位置图标</string>
    <string name="dropdown_icon">下拉图标</string>
    <string name="search_icon">搜索图标</string>
    <string name="settings_icon">设置图标</string>
    <string name="date_time">今天 4月8日 星期一\n19:26 更新</string>
    <string name="refresh_click_me">点我刷新</string>
    <string name="temperature_value">26</string>
    <string name="degree_symbol">°</string>
    <string name="sunny">晴朗</string>
    <string name="weather_icon">天气图标</string>
    <string name="humidity">湿度</string>
    <string name="humidity_value">45%</string>
    <string name="wind_speed">风速</string>
    <string name="wind_speed_value">3.5 km/h</string>
    <string name="pressure">气压</string>
    <string name="pressure_value">1013 hPa</string>
    <string name="air_quality">空气质量</string>
    <string name="good">良好</string>
    <string name="air_quality_index">58</string>
    <string name="next_24_hours">未来24小时</string>
    <string name="now">现在</string>
    <string name="default_temp">26°</string>
    <string name="home">首页</string>
    <string name="star">收藏</string>
    <string name="profile">我的</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>