<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:gravity="center_vertical">

    <LinearLayout
        android:id="@+id/ll_change_city_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/iv_location"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@mipmap/icon_location"
            android:contentDescription="@string/location_icon"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/tv_city_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text=""
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:text="@string/beijing" />

        <ImageView
            android:id="@+id/iv_dropdown"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="4dp"
            app:tint="@color/white"
            android:src="@mipmap/icon_down_arrow"
            android:contentDescription="@string/dropdown_icon" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvCurrentTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_gravity="center_vertical"
        android:text=""
        android:textColor="@color/white"
        android:textSize="16sp"
        tools:text="当前时间" />

</LinearLayout>