<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:elevation="8dp"
    android:orientation="horizontal"
    android:padding="8dp">

    <LinearLayout
        android:id="@+id/nav_home"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_home"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="@string/home"
            android:src="@mipmap/icon_home"
            app:tint="@color/weather_primary" />

        <TextView
            android:id="@+id/tv_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home"
            android:textColor="@color/weather_primary"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/nav_life"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_life"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="@string/star"
            android:src="@mipmap/icon_star"
            app:tint="@color/default_gray" />

        <TextView
            android:id="@+id/tv_life"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/star"
            android:textColor="@color/default_gray"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/nav_profile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_profile"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="@string/profile"
            android:src="@mipmap/icon_mine"
            app:tint="@color/default_gray" />

        <TextView
            android:id="@+id/tv_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile"
            android:textColor="@color/default_gray"
            android:textSize="12sp" />
    </LinearLayout>
</LinearLayout>